--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,22 +1,24 @@
 ---
 // Henter parametrene fra Astro.props
-const { variant= "primary", size = "medium" } = Astro.props; 
- 
+const { variant = "primary", size = "medium" } = Astro.props;
+
 //Definer den styling (Tailwind classes, der gør sig gældende for alle knapper)
-const buttonStyling = "border-2 px-16 py-4"; 
- 
-//Definer den styling (Tailwind classes), der gør sig gældende for de forskellige varianter 
+const buttonStyling = "px-4 py-1 font-heading uppercase cursor-pointer";
+
+//Definer den styling (Tailwind classes), der gør sig gældende for de forskellige varianter
 const variantClasses = {
-"primary": "border-black hover:bg-black hover:text-white hover:-skew-x-12 transition-all duration-700", /* border-primary-500 */
-"secondary": "border-blue-500 hover:bg-blue-500 hover:border-blue-200" /* border-secondary-500 */
+  primary: "border-tertiary-900 text-tertiary-900 hover:bg-tertiary-900 hover:text-primary-900 transition-all duration-400",
+  secondary: "border-primary-900 text-primary-900 hover:bg-secondary-900 transition-all duration-400",
+  accent: "border-accent-900 text-accent-900 hover:bg-accent-900 hover:text-primary-900 transition-all duration-400",
 };
- 
+
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskelligeog størrelser.
 const sizeClasses = {
-"large": "text-4xl",
-"medium": "text-xl",
-"small": "text-large"
+  large: "text-4xl border-5",
+  medium: "text-xl border-4",
+  small: "text-lg border-3",
 };
 ---
+
 <!--Sæt classes for den pågældende knap sammen ved hjælp af Astros class:list -->
 <button class:list={[buttonStyling, variantClasses[variant], sizeClasses[size]]}><slot /></button>
