--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -1,20 +1,20 @@
 ---
 // Henter parametrene fra Astro.props
-const { htmlheading="h2", size="medium", font="sans", stylingclasses=""} = Astro.props; 
+const { htmlheading = "h2", size = "medium", font = "", stylingclasses = "" } = Astro.props;
 const Htmlheading = htmlheading;
- 
+
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige størrelser.
 const sizeClasses = {
-"large": "text-3xl lg:text-6xl",
-"medium": "text-2xl lg:text-3xl",
-"small": "text-xl",
+  large: "uppercase text-4xl md:text-5xl lg:text-6xl font-heading pb-6",
+  medium: "uppercase text-l md:text-xl font-heading pb-6",
 };
 
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige skrifttyper.
 const fontClasses = {
-"display": "font-display",
-"sans": "font-sans",
-"serif": "font-serif",
+  display: "font-display",
+  sans: "font-sans",
+  serif: "font-serif",
 };
 ---
-<Htmlheading class:list={[stylingclasses, sizeClasses[size], fontClasses[font]]}><slot /></Htmlheading>
+
+<Htmlheading class:list={[sizeClasses[size], fontClasses[font], stylingclasses]}><slot /></Htmlheading>
