--- a/src/components/Text.astro
+++ b/src/components/Text.astro
@@ -1,11 +1,12 @@
 ---
 // Henter parametrene fra Astro.props
-const { teksttype="brødtekst", stylingclasses=""} = Astro.props; 
- 
+const { teksttype = "brødtekst", stylingclasses = "" } = Astro.props;
+
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige størrelser.
 const sizeClasses = {
-"konsultativ": "text-sm text-italic",
-"brødtekst": "text-xl my-4",
+  konsultativ: "text-sm text-italic font-p",
+  brødtekst: "text-l lg:text-xl font-p pb-4",
 };
 ---
+
 <p class:list={[sizeClasses[teksttype], stylingclasses]}><slot /></p>
