--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,11 +5,35 @@ import { Image } from "astro:assets";
 import thumbsup from "../assets/images/thumbsup.png";
 import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
+import Hero from "../components/Hero.astro";
+import DitEventyr from "../components/DitEventyr.astro";
+import Rejser from "../components/Rejser.astro";
+import Info from "../components/Info.astro";
+import ReadMore from "../components/ReadMore.astro";
+import Oplevelser from "../components/Oplevelser.astro";
+import Trustpilot from "../components/Trustpilot.astro";
+import Forskel from "../components/Forskel.astro";
+import Blog from "../components/Blog.astro";
 import Button from "../components/Button.astro";
 ---
+
 <MainLayout title="Titel">
-	<main class="container mx-auto p-4">
-		<Heading htmlheading="h1">Lav noget flot!</Heading>
-        <Text teksttype="brødtekst">Så bliver Anders glad:-)</Text>
-	</main>
+  <div class="progress-bar h-1 fixed w-full bg-tertiary-900 left-0 origin-top-left top-0 right-0 z-1000"></div>
+  <main>
+    <Hero />
+    <DitEventyr />
+    <Rejser />
+    <Info />
+    <ReadMore />
+    <Oplevelser />
+    <Trustpilot />
+    <Forskel />
+    <Blog />
+  </main>
 </MainLayout>
+
+<script>
+  /* Import af Motion One bibliotek */
+  import { animate, stagger, inView, scroll } from "motion";
+  scroll(animate(".progress-bar", { scaleX: [0, 1] }));
+</script>
