--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,10 +13,10 @@ import Text from "../components/Text.astro";
 
       <!-- Logoer -->
       <div class="flex flex-wrap justify-center md:justify-between items-center gap-6 md:gap-10">
-        <img src="/src/assets/images/rejsegaranti.svg" alt="Rejsegaranti" class="h-12 object-contain" />
-        <img src="/src/assets/images/gouda.svg" alt="Gouda" class="h-12 object-contain" />
-        <img src="/src/assets/images/jysk.svg" alt="Jysk" class="h-12 object-contain" />
-        <img src="/src/assets/images/co2.svg" alt="CO2" class="h-12 object-contain" />
+        <img src="/rejsegaranti.svg" alt="Rejsegaranti" class="h-12 object-contain" />
+        <img src="/gouda.svg" alt="Gouda" class="h-12 object-contain" />
+        <img src="/jysk.svg" alt="Jysk" class="h-12 object-contain" />
+        <img src="/co2.svg" alt="CO2" class="h-12 object-contain" />
       </div>
     </div>
   </section>
@@ -24,7 +24,7 @@ import Text from "../components/Text.astro";
   <!-- billede + tekst (højskole i udlandet) -->
   <section class="sm:grid sm:grid-cols-2">
     <div>
-      <img src="/assets/images/footer_img.webp" alt="skov billede" />
+      <img src="/footer_img.webp" alt="skov billede" />
     </div>
     <div class="p-7 sm:p-10">
       <Heading htmlheading="h2" size="large">HØJSKOLE I UDLANDET</Heading>
