--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -3,9 +3,9 @@ import BlogCard from "../components/BlogCard.astro";
 import Button from "../components/Button.astro";
 import Heading from "../components/Heading.astro";
 import { Image } from "astro:assets";
-import blog_1 from "../assets/images/blog_1.webp";
-import blog_2 from "../assets/images/blog_2.webp";
-import blog_3 from "../assets/images/blog_3.webp";
+import blog_1 from "../blog_1.webp";
+import blog_2 from "../blog_2.webp";
+import blog_3 from "../blog_3.webp";
 ---
 
 <section class="mb-20">
