--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ import Text from "../components/Text.astro";
 
       <!-- Logoer -->
       <div class="flex flex-wrap justify-center md:justify-between items-center gap-6 md:gap-10">
-        <img src="../rejsegaranti.svg" alt="Rejsegaranti" class="h-12 object-contain" />
+        <img src="src/assets/images/rejsegaranti.svg" alt="Rejsegaranti" class="h-12 object-contain" />
         <img src="../gouda.svg" alt="Gouda" class="h-12 object-contain" />
         <img src="../jysk.svg" alt="Jysk" class="h-12 object-contain" />
         <img src="../co2.svg" alt="CO2" class="h-12 object-contain" />
