--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,7 @@
 ---
 import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
+import Gouda from "../assets/images/gouda.svg";
 ---
 
 <footer class="bg-primary-900 text-secondary-900">
@@ -14,7 +15,7 @@ import Text from "../components/Text.astro";
       <!-- Logoer -->
       <div class="flex flex-wrap justify-center md:justify-between items-center gap-6 md:gap-10">
         <img src="src/assets/images/rejsegaranti.svg" alt="Rejsegaranti" class="h-12 object-contain" />
-        <img src="../gouda.svg" alt="Gouda" class="h-12 object-contain" />
+        <img src="/gouda.svg" alt="Gouda" class="h-12 object-contain" />
         <img src="../jysk.svg" alt="Jysk" class="h-12 object-contain" />
         <img src="../co2.svg" alt="CO2" class="h-12 object-contain" />
       </div>
