--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,6 @@
 ---
 import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
-import Image from "astro/components/Image.astro";
-import Gouda from "../assets/images/gouda.svg";
 ---
 
 <footer class="bg-primary-900 text-secondary-900">
@@ -16,8 +14,7 @@ import Gouda from "../assets/images/gouda.svg";
       <!-- Logoer -->
       <div class="flex flex-wrap justify-center md:justify-between items-center gap-6 md:gap-10">
         <img src="src/assets/images/rejsegaranti.svg" alt="Rejsegaranti" class="h-12 object-contain" />
-        <Image src={Gouda} alt="Gouda" class="h-12 object-contain" />
-        <img src="/gouda.svg" alt="Gouda" class="h-12 object-contain" />
+        <img src="../gouda.svg" alt="Gouda" class="h-12 object-contain" />
         <img src="../jysk.svg" alt="Jysk" class="h-12 object-contain" />
         <img src="../co2.svg" alt="CO2" class="h-12 object-contain" />
       </div>
