--- a/src/components/Trustpilot.astro
+++ b/src/components/Trustpilot.astro
@@ -14,33 +14,33 @@ import Text from "../components/Text.astro";
   <div class="inline-flex animate-infinite-scroll items-center gap-20 font-heading whitespace-nowrap">
     <!-- første -->
     <div class="flex flex-col items-center text-center gap-1">
-      <img src="/src/assets/images/stars.svg" class="h-10 object-contain" alt="trustpilot" />
+      <img src="/stars.svg" class="h-10 object-contain" alt="trustpilot" />
       <p class="text-lg lg:text-xl pb-4">“ET AF DE VALG JEG ALDRIG VIL FORTRYDE.”</p>
       <p class="text-xs lg:text-sm">Cæcilie Sams</p>
     </div>
 
     <!-- anden -->
     <div class="flex flex-col items-center text-center gap-1">
-      <img src="/src/assets/images/stars.svg" class="h-10 object-contain" alt="trustpilot" />
+      <img src="/stars.svg" class="h-10 object-contain" alt="trustpilot" />
       <p class="text-lg lg:text-xl pb-4">“DET VAR SÅ FEDT AT REJSE MED HÖJSKOLENDK”</p>
       <p class="text-xs lg:text-sm">Jacob K. Lauridsen</p>
     </div>
 
     <!-- trustpilot logo -->
     <div class="flex items-center">
-      <img src="/assets/images/trustpilot_logo.svg" class="h-10 object-contain" alt="trustpilot logo" />
+      <img src="/trustpilot_logo.svg" class="h-10 object-contain" alt="trustpilot logo" />
     </div>
 
     <!-- tredje -->
     <div class="flex flex-col items-center text-center gap-1">
-      <img src="/src/assets/images/stars.svg" class="h-10 object-contain" alt="trustpilot" />
+      <img src="/stars.svg" class="h-10 object-contain" alt="trustpilot" />
       <p class="text-lg lg:text-xl pb-4">“EN FANTASTISK OG LÆRERIG REJSE”</p>
       <p class="text-xs lg:text-sm">Benjamin Uhlemann</p>
     </div>
 
     <!-- fjerde -->
     <div class="flex flex-col items-center text-center gap-1 mr-20">
-      <img src="/src/assets/images/stars.svg" class="h-10 object-contain" alt="trustpilot" />
+      <img src="/stars.svg" class="h-10 object-contain" alt="trustpilot" />
       <p class="text-lg lg:text-xl pb-4">“GØR DET - DU VIL ALDRIG FORTRYDE DET!”</p>
       <p class="text-xs lg:text-sm">Casper Kristensen</p>
     </div>
@@ -50,25 +50,25 @@ import Text from "../components/Text.astro";
   <div class="inline-flex animate-infinite-scroll items-center gap-20 font-heading whitespace-nowrap" aria-hidden="true">
     <!-- samme indhold igen -->
     <div class="flex flex-col items-center text-center gap-1">
-      <img src="/src/assets/images/stars.svg" class="h-10 object-contain" alt="trustpilot" />
+      <img src="/stars.svg" class="h-10 object-contain" alt="trustpilot" />
       <p class="text-lg lg:text-xl pb-4">“ET AF DE VALG JEG ALDRIG VIL FORTRYDE.”</p>
       <p class="text-xs lg:text-sm">Cæcilie Sams</p>
     </div>
     <div class="flex flex-col items-center text-center gap-1">
-      <img src="/src/assets/images/stars.svg" class="h-10 object-contain" alt="trustpilot" />
+      <img src="/stars.svg" class="h-10 object-contain" alt="trustpilot" />
       <p class="text-lg lg:text-xl pb-4">“DET VAR SÅ FEDT AT REJSE MED HÖJSKOLENDK”</p>
       <p class="text-xs lg:text-sm">Jacob K. Lauridsen</p>
     </div>
     <div class="flex items-center">
-      <img src="/src/assets/images/trustpilot_logo.svg" class="h-10 object-contain" alt="trustpilot logo" />
+      <img src="/trustpilot_logo.svg" class="h-10 object-contain" alt="trustpilot logo" />
     </div>
     <div class="flex flex-col items-center text-center gap-1">
-      <img src="/src/assets/images/stars.svg" class="h-10 object-contain" alt="trustpilot" />
+      <img src="/stars.svg" class="h-10 object-contain" alt="trustpilot" />
       <p class="text-lg lg:text-xl pb-4">“EN FANTASTISK OG LÆRERIG REJSE”</p>
       <p class="text-xs lg:text-sm">Benjamin Uhlemann</p>
     </div>
     <div class="flex flex-col items-center text-center gap-1">
-      <img src="/src/assets/images/stars.svg" class="h-10 object-contain" alt="trustpilot" />
+      <img src="/stars.svg" class="h-10 object-contain" alt="trustpilot" />
       <p class="text-lg lg:text-xl pb-4">“GØR DET - DU VIL ALDRIG FORTRYDE DET!”</p>
       <p class="text-xs lg:text-sm">Casper Kristensen</p>
     </div>
