Billeder i public mappe

--- a/src/components/Forskel.astro
+++ b/src/components/Forskel.astro
@@ -17,22 +17,22 @@ import Button from "../components/Button.astro";
       <div class="grid grid-cols-2 gap-6 mt-6">
         <div class="flex flex-col items-center text-center text-xs">
           <Text teksttype="brødtekst" class="font-semibold">TREES FOR THE FUTURE</Text>
-          <img class="mb-5" src="/src/assets/images/tree-for-future.svg" alt="Tree image" />
+          <img class="mb-5" src="/tree-for-future.svg" alt="Tree image" />
         </div>
 
         <div class="flex flex-col items-center text-center text-xs">
           <Text teksttype="brødtekst" class="font-semibold">VERDENS SKOVE</Text>
-          <img class="mt-2" src="/src/assets/images/verdens-skov.svg" alt="Skov" />
+          <img class="mt-2" src="/verdens-skov.svg" alt="Skov" />
         </div>
 
         <div class="flex flex-col items-center text-center text-xs">
           <Text teksttype="brødtekst" class="font-semibold">WORLD ANIMAL PROTECTION</Text>
-          <img class="mt-2" src="/src/assets/images/World-animal-protection.svg" alt="zebra" />
+          <img class="mt-2" src="/World-animal-protection.svg" alt="zebra" />
         </div>
 
         <div class="flex flex-col items-center text-center text-xs">
           <Text teksttype="brødtekst" class="font-semibold">CO2 NEUTRALT WEBSITE</Text>
-          <img class="mt-2" src="/src/assets/images/Co2-neutralt-website.svg" alt="Co2" />
+          <img class="mt-2" src="/Co2-neutralt-website.svg" alt="Co2" />
         </div>
       </div>
 
@@ -43,7 +43,7 @@ import Button from "../components/Button.astro";
 
     <!-- Højre kolonne -->
     <div class="mt-10 lg:mt-0 lg:ml-auto lg:-mr-10 sm:-mr-7">
-      <img src="/src/assets/images/Verdens_skove-billede.svg" alt="Billede af skoven" class="w-full h-full object-cover lg:rounded-none" />
+      <img src="/Verdens_skove-billede.svg" alt="Billede af skoven" class="w-full h-full object-cover lg:rounded-none" />
     </div>
   </div>
 </div>
